@@ -100,6 +100,7 @@ Lawrence Velázquez		larryv@macports.org
 Lionel Landwerlin		llandwerlin@gmail.com
 Maciej Helminiak		dion2@wp.pl
 Mahesh Narayanamurthi		mahesh.mach@gmail.com
+Marc Glisse			marc.glisse@inria.fr
 Marcel Loose			loose@astron.nl
 Markus Duft			markus.duft@salomon.at
 Martin Doucha			doucha@integri.cz
