@@ -27,6 +27,14 @@ NEWS - list of user-visible changes between releases of GNU Libtool
     ia64-hp-hpux*, because the default system runtime loader path does
     not contain them.
 
+  - Previously, when using Sun C++ on Solaris or Linux, `-Cstd -Crun`
+    flags were added to $postdeps unless CXX or CXXFLAGS contained
+    `-library=stlport4`.  Newer releases have added other compiler flags
+    that are also incompatible with `-Cstd -Crun`, so now we don't add
+    them if any of `-std=c++[0-9][0-9]`, `-library=stdcxx4` or
+    `-compat=g` were found in CXX or CXXFLAGS when the Sun C++ compiler
+    is detected.
+
 
 * Noteworthy changes in release 2.4.4 (2014-11-29) [stable]
 
